# harlequin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  main.py  prova.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: release.yml
harlequin/: __init__.py  harlequin.py  hello.py  repo.py
tests/: test_harlequin.py  test_hello.py  test_repo.py
tools/: ds_search.py  ds_show.py
